# bevygap

./: .dockerignore  .gitignore  .matchmaker.env.example  404.html  Cargo.toml  README.md  docker-compose.yaml  edgegap.env.example  gen-edgegap-client.sh  index.html  introduction.html  nats.env.example  print.html  searchindex.js  searchindex.json  traefik.yml
.github/workflows/: publish-book.yaml  publish-matchmaker-httpd.yaml  publish-matchmaker.yaml  publish-webhook-sink.yaml
bevy_edgegap_gameserver/: Cargo.toml  README.md
bevy_edgegap_gameserver/examples/: stub.rs
bevy_edgegap_gameserver/src/: arbitrium_env.rs  http_client.rs  nats.rs  plugin.rs
bevy_nfws/: Cargo.toml  README.md
bevy_nfws/examples/: wstest.rs
bevy_nfws/src/: lib.rs
bevygap_client_plugin/: Cargo.toml  README.md
bevygap_client_plugin/examples/: connect.rs
bevygap_client_plugin/src/: lib.rs  traits.rs
bevygap_gameserver/: Cargo.toml
bevygap_gameserver/examples/: stub.rs
bevygap_gameserver/src/: arbitrium_env.rs  edgegap_context_plugin.rs  lib.rs  plugin.rs
bevygap_httpd/: Cargo.toml  Dockerfile
bevygap_httpd/src/: main.rs
bevygap_matchmaker/: Cargo.toml  Dockerfile
bevygap_matchmaker/src/: main.rs  session_delete_worker.rs  session_reaper.rs  session_request_streamer.rs  session_service.rs
bevygap_matchmaker_bemw/: Cargo.toml
bevygap_matchmaker_bemw/src/: client.rs  lib.rs  messages.rs  server.rs  server_bin.rs
bevygap_matchmaker_httpd/: Cargo.toml  Dockerfile
bevygap_matchmaker_httpd/src/: main.rs  session_request_handler.rs  session_request_handler_ws.rs
bevygap_server_plugin/: Cargo.toml  README.md
bevygap_server_plugin/src/: arbitrium_env.rs  edgegap_context.rs  lib.rs  plugin.rs
bevygap_shared/: Cargo.toml  README.md
bevygap_shared/examples/: nats.rs
bevygap_shared/src/: lib.rs  nats.rs  protocol.rs
bevygap_webhook_sink/: Cargo.toml  Dockerfile
bevygap_webhook_sink/src/: main.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/containerizing/: index.md
book/src/development/: index.md
book/src/installation/: bevygap_nats.md  edgegap.md  game_client.md  index.md  matchmaker_services.md  nats.md
containerizing/: index.html
development/: index.html
edgegap-client/: Cargo.toml  README.md
edgegap-client/.openapi-generator/: FILES
edgegap-client/docs/: ApiModelLocationbeacon.md  AppVersionList.md  AppVersionPayload.md  AppVersionUpdatePayload.md  AppVersionUpdateResponse.md  ArtifactPayload.md  BulkSessionDelete.md  BulkSessionPost.md  ContextApi.md  CustomBulkSessionsModel.md  CustomSessionsApi.md  DeploymentTagsApi.md  Deployments.md  DeploymentsApi.md  EndpointStorageApi.md  FleetPoliciesPatchPayload.md  FleetPoliciesPostResponse.md  FleetsApi.md  GeoIpListModel.md  ImageTagPayload.md  IpAddressLookupLocation.md  IpAddressLookupResponse.md  IpAddressesLookupResponse.md  IpLookupApi.md  LobbiesApi.md  Location.md  Locations.md  LocationsApi.md  MappedPortResponse.md  MatchmakerApi.md  MatchmakerComponentEnvListResponse.md  MatchmakerComponentResponse.md  MatchmakerResponse.md  MetricsApi.md  MetricsModel.md  MetricsResponse.md  PullProfilesListResponse.md  RelaySessionBaseResponse.md  RelaySessionCreatePayload.md  RelaySessionUserBaseResponse.md  (+12 more)
edgegap-client/src/apis/: applications_api.rs  configuration.rs  container_registry_api.rs  context_api.rs  custom_sessions_api.rs  deployment_tags_api.rs  deployments_api.rs  endpoint_storage_api.rs  fleets_api.rs  ip_lookup_api.rs  lobbies_api.rs  locations_api.rs  matchmaker_api.rs  metrics_api.rs  mod.rs  monitoring_api.rs  relays_api.rs  sessions_api.rs  telemetry_api.rs
edgegap-client/src/models/: active_deployment_telemetry_request.rs  active_deployment_telemetry_response.rs  active_deployment_telemetry_score.rs  api_model_containercrashdata.rs  api_model_location.rs  app_version_delete.rs  app_version_list.rs  app_version_payload.rs  app_version_port.rs  app_version_update_payload.rs  app_version_whitelist_entry_payload.rs  app_version_whitelist_entry_success.rs  application.rs  application_post.rs  base_model.rs  bulk_session_delete.rs  bulk_session_post.rs  context_create_deployment_tag_request.rs  context_deployment_tag_response.rs  custom_bulk_session_model.rs  custom_bulk_sessions_model.rs  custom_session_delete_model.rs  custom_session_model.rs  delete.rs  deploy_model.rs  deployment.rs  deployment_bulk_stop_payload.rs  deployment_bulk_stop_response.rs  deployment_list_data.rs  deployment_location.rs  deployment_session_context.rs  deployment_stop_response.rs  deployment_tag_list_response.rs  deployment_update_payload.rs  deployment_update_response.rs  endpoint_storage_delete_response.rs  endpoint_storage_list_response.rs  (+60 more)
edgegap_async/: Cargo.toml  README.md
edgegap_async/.openapi-generator/: FILES
edgegap_async/docs/: ActiveDeploymentTelemetryGetResult.md  ApiModelContainerlogs.md  ApiModelLocation.md  ApiModelRegistryartifacttagdeleteresponse.md  ApiModelTagdeleteartifact.md  AppVersionCreateResponse.md  AppVersionPayload.md  AppVersionUpdatePayload.md  AppVersionWhitelistEntrySuccess.md  AppVersionWhitelistResponse.md  Applications.md  ApplicationsApi.md  ContainerRegistryApi.md  ContextCreateDeploymentTagRequest.md  Delete.md  DeployModel.md  Deployment.md  DeploymentAvailable.md  DeploymentAvailablePayload.md  DeploymentAvailableResponse.md  DeploymentBulkStopPayload.md  DeploymentBulkStopResponse.md  DeploymentListData.md  DeploymentLocation.md  DeploymentTagListResponse.md  DeploymentsApi.md  EndpointStorageListResponse.md  FleetList.md  FleetPoliciesGetResponse.md  FleetPoliciesPostPayload.md  HorizontalScalerConstraintList.md  ImageTagList.md  LobbiesApi.md  LocationBeaconList.md  LocationModel.md  MatchmakerComponentCreate.md  MatchmakerComponentListResponse.md  MatchmakerComponentUpdate.md  MatchmakerListResponse.md  MetricsApi.md  (+10 more)
installation/: bevygap_nats.html  edgegap.html  game_client.html  index.html  matchmaker_services.html  nats.html
utils/: README.md  api-get.sh  gen-edgegap-client.sh  set-caroot-argument.sh  set-mock-arbitrium-envs.sh
(+99 files in other folders)
