[workspace]
members = ["bevygap_matchmaker", "bevygap_gameserver", "bevygap_shared", "bevygap_httpd"]
resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["RJ <rj@metabrew.com>"]
publish = false
edition = "2021"

# optimisation notes: https://bevy-cheatbook.github.io/pitfalls/performance.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# If your own code does CPU-intensive work, you might want to also enable some optimization for it.
# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Here is a configuration for the most aggressive optimizations possible
# Read this when trying to optimise WASM build: https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
bevy = {version = "0.14", default-features = false}
bevy-tokio-tasks = "0.14"

rand = "*"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = {version = "0.36.0", features = ["service"]}
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.23"
clap = { version = "4.4", features = ["derive"] }
#lightyear = {version = "0.17.1", default-features = false}
# same LY ver as game:
lightyear = {git = "https://github.com/cBournhonesque/lightyear.git", ref = "a7aed471ee6e35e937cfa6ff3b6baec1d245fc05", default-features = false}

base64 = "0.22"
# edgegap = {path = "./edgegap-client"}
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }

[workspace.lints.clippy]
type_complexity = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
