[package]
name = "bevy_edgegap_gameserver"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
bevy = { workspace = true, default-features = true }
bevy-tokio-tasks.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
reqwest.workspace = true

[lints] 
workspace = true
