[package]
name = "bevy_nfws"
version = "0.1.0"
authors.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
tokio-tungstenite-wasm = "0.3.1"
bevy-tokio-tasks.workspace = true
futures-util.workspace = true
tokio.workspace = true

[lints]
workspace = true
