[package]
name = "bevygap_client_plugin"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
lightyear = {workspace = true, features = ["webtransport"]}
bevy.workspace = true
bevy_http_client.workspace = true
base64.workspace = true
serde.workspace = true

[lints]
workspace = true
