[package]
name = "bevygap_client_plugin"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
lightyear = {workspace = true, features = ["webtransport"]}
bevy.workspace = true
base64.workspace = true
tokio.workspace = true
bevy_nfws.workspace = true
serde_json.workspace = true
bevygap_shared.workspace = true

[dev-dependencies]
bevy = {workspace = true, default-features = true}

[lints]
workspace = true
