[package]
name = "bevygap_client_plugin"
version.workspace = true
authors.workspace = true
publish = true
edition.workspace = true
license.workspace = true
description = "Plugin for bevy games for use with bevygap matchmaker and lightyear"

[features]
default = []
# Needed for wss:// matchmaker connections on native builds
# Don't enable on wasm!
# Give this a thumbsup: https://github.com/rust-lang/cargo/issues/1197
matchmaker-tls = ["bevy_nfws/wss"]

[dependencies]
lightyear = { workspace = true, features = ["webtransport"] }
bevy.workspace = true
base64.workspace = true
bevy_nfws.workspace = true
serde_json.workspace = true
bevygap_shared.workspace = true

[dev-dependencies]
bevy = { workspace = true, default-features = true }

[lints]
workspace = true
