[package]
name = "bevygap_matchmaker_httpd"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
axum = "0.7.7"
http-body-util = "0.1.0"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bevygap_shared = { path = "../bevygap_shared" }
anyhow = "1.0"
tower-http.workspace = true
clap.workspace = true

[lints]
workspace = true
