[package]
name = "bevygap_matchmaker_httpd"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
http-body-util.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bevygap_shared = { workspace = true, features = ["nats"] }
anyhow.workspace = true
tower-http.workspace = true
clap.workspace = true
async-nats.workspace = true

[lints]
workspace = true
