[package]
name = "bevygap_server_plugin"
edition = "2021"
version.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
bevygap_shared = {workspace = true, features = ["nats", "bevy"]}
bevy.workspace = true
bevy-tokio-tasks.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
reqwest.workspace = true
lightyear.workspace = true
async-nats.workspace = true
tokio.workspace = true


[lints] 
workspace = true
