[package]
name = "bevygap_shared"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[features]
default = []
bevy = ["dep:bevy"]

[dependencies]
bevy = {workspace = true, optional = true}
async-nats.workspace = true
log.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tokio.workspace = true

[lints]
workspace = true
