[package]
name = "bevygap_shared"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[features]
default = ["nats"]
nats = ["dep:async-nats"]
bevy = ["dep:bevy"]

[dependencies]
bevy = {workspace = true, optional = true}
async-nats = {workspace = true, optional = true}
log.workspace = true
serde.workspace = true
regex.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
tokio.workspace = true

[lints]
workspace = true
