[package]
name = "bevygap_webhook_sink"
version.workspace = true
authors.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bevygap_shared = {workspace = true, features = ["nats"]}
anyhow.workspace = true

[lints]
workspace = true
